Fix x overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 html {
   width: 375px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .container {
@@ -13,8 +20,8 @@ body {
   min-height: 100vh;
   flex-direction: column;
   align-items: center;
-  padding: 120px;
-  gap: 80px;
+  padding: 120px 60px;
+  gap: 60px;
 }
 
 .grid-container {
